fixed mariadb container

--- a/srcs/requirements/wordpress/conf/www.conf
+++ b/srcs/requirements/wordpress/conf/www.conf
@@ -1,3 +1,4 @@
+; reference for the values: https://www.digitalocean.com/community/tutorials/php-fpm-nginx
 [wordpress_site]
 user = www-data
 group = www-data
