--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -55,6 +55,17 @@ services:
     ports:
       - 3000:3000
 
+  redis:
+    build:
+      context: .
+      dockerfile: requirements/bonus/redis/Dockerfile
+    container_name: redis
+    ports:
+      - 6379:6379
+    networks:
+      - inception
+    restart: on-failure
+
 volumes:
   db_volume:
     name: "db_volume"
